Make JDK11 locale loader act like previous ones - TRUNK-5717